# Neural-Computer

./: .gitignore  AGENTS.md  ARCHITECTURE.md  App.tsx  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GeneratedContent.tsx  NOTICE  README.md  SECURITY.md  constants.ts  geminiService.ts  index.html  metadata.json  package-lock.json  package.json  server.mjs  system_prompt.md  tsconfig.json  types.ts  vite.config.ts
.github/: pull_request_template.md
components/: FeedbackPill.tsx  GeneratedContent.tsx  InsightsPanel.tsx  RuntimeRecoveryScreen.tsx  SettingsSkillPanel.tsx  Window.tsx
docs/: OPENCLAW_VS_NEURAL_COMPUTER_DIFFERENCE_REPORT.md  onboarding-runtime.md  release-readiness.md  release.md  self-improvement-system.md
scripts/: build-dmg-fallback.mjs  build-release.mjs  build-server-sidecar.mjs  regenerate-macos-icons.sh  release-preflight.mjs
services/: bingSearchService.ts  evaluator.ts  feedbackTelemetry.ts  geminiService.ts  generationTelemetry.ts  insights.ts  interactionTelemetry.ts  loadingPlaceholderPolicy.ts  onboardingService.ts  piToolRuntime.mjs  renderOutputTool.mjs  renderQualityGate.ts  runtimeBootstrapService.ts  runtimePaths.mjs  searchService.ts  selfImprovementCoordinator.ts  serverNetworkPolicy.mjs  session.ts  skillRegistry.ts  streamingUiPolicy.ts  uiHistoryRuntime.mjs  updaterService.ts  workspaceBootstrap.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.release.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
tests/: loading-placeholder-policy.test.ts  pi-tool-guidance-read-screen.test.ts  (+8 more)
(+7 files in other folders)
